[package]
name = "example"
version = "0.1.0"
authors = ["AZERO.ID <hello@azero.id>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

# Include the following dependency
azns-integration = { git = "https://github.com/azero-id/contract-integration", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "azns-integration/std", # <-- Add this line
]
ink-as-dependency = []
